# mimiclaw_qiyeweixin

./: README_CN.md
main/: CMakeLists.txt  mimi.c  mimi_config.h  mimi_secrets.h.example
main/agent/: agent_loop.c  context_builder.c
main/bus/: message_bus.h
main/cli/: serial_cli.c
main/cron/: cron_service.c
main/gateway/: ws_server.c  ws_server.h
main/llm/: llm_proxy.c  llm_proxy.h
main/memory/: session_mgr.c
main/tools/: tool_cron.c  tool_get_time.c  tool_registry.c
main/wecom/: wecom_bot.c  wecom_bot.h
